
/*
 *        CHANGELOG
 *        1.0.9        2016-02-07        - add settings array to the user functions
 *        1.0.8        2016-02-05        - allow to add an offset to the server time 
 *        1.0.7        2016-02-04        - another fix for 12/24h handling
 *        1.0.6        2016-02-04        - set up time zone before evaluating starttime
 *        1.0.5        2016-02-03        - suppress error message for empty calendars
 *        1.0.4        2016-02-03        - allow to hide events that already have ended earlier today
 *        1.0.3        2016-01-30        - further improve link example in user functions
 *        1.0.2        2016-01-29        - do not change already html-formatted links
 *        1.0.1        2016-01-29        - do not display events after defined endtime
 *        1.0.0        2016-01-28        - add user function hooks
 *        0.9.9        2016-01-26        - support digest authentication for get requests
 *        0.9.8        2016-01-25        - set user agent to Extcal instead of real one
 *        0.9.7        2016-01-25        - better handle ssl in get requests (skip verification if requestetd)
 *        0.9.6        2016-01-15        - correctly show long lasting current appointments
 *        0.9.5        2016-01-15        - do not overwrite style file upon upgrade anymore
 *        0.9.4        2016-01-15        - improved the placeholders in template for allday events
 *        0.9.3        2016-01-14        - send user agent for advanced authentication
 *        0.9.2        2016-01-11        - add the option to skip ssl certificate verification
 *        0.9.1        2015-07-29        - fix start time check for wholeday events
 *        0.9.0        2015-07-22        - add checkbox to control the midnight shift
 *        0.8.11        2015-07-22        - properly treat calendar urls, which are commented out
 *        0.8.10        2015-07-22        - fixed events first ocurring before 1970,thanks to Alex