@@ -3,7 +3,7 @@
  *
  * @category        page
  * @package         External Calendar
- * @version         1.0.9
+ * @version         1.1.0
  * @authors         Martin Hecht
  * @copyright       (c) 2015 - 2016, Martin Hecht (mrbaseman)
  * @link            http://forum.websitebaker.org/index.php/topic,28493.0.html
@@ -16,6 +16,7 @@
 
 /*
  *        CHANGELOG
+ *        1.1.0        2016-02-11        - correctly handle and prefilter reoccurring events 
  *        1.0.9        2016-02-07        - add settings array to the user functions
  *        1.0.8        2016-02-05        - allow to add an offset to the server time 
  *        1.0.7        2016-02-04        - another fix for 12/24h handling
@@ -105,7 +106,7 @@ if(!defined('WB_PATH')) {
 $module_directory        = 'extcal';
 $module_name                = 'External Calendar';
 $module_function        = 'page';
-$module_version                = '1.0.9';
+$module_version                = '1.1.0';
 $module_platform        = 'WebsiteBaker 2.8.x';
 $module_author                = 'Martin Hecht';
 $module_license                = 'GNU General Public License';
